[package]
name = "blocky"
version = "0.1.0"
authors = ["TheArtist <agorglouk@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.8.2"
clap = "3.0.0-beta.2"
walkdir = "2.3.1"
fast_rsync = "0.1.3"
futures = "0.3"
hyper = "0.13.9"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
url = "2.2.0"
sha2 = "0.9.2"
base64 = "0.13.0"
pretty-bytes = "0.2.2"
